--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
         <title>The Ultimate React Personal Portfolio Website</title>
     </head>
     <body>
-    <div id="root"></div>
+    <div id="app"></div>
     </body>
 </html>
